[tool.poetry]
name = "python-dummy-wrapper"
version = "0.1.0"
description = ""
authors = ["adisbladis <adisbladis@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pretalx = "^1.0"
psycopg2-binary = "^2.8"
dj-static = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
